Bug 375723 - v16.12.1 beta for MS Windows: Menu "Settings/Theme/Configuration" throws start error
Summary: v16.12.1 beta for MS Windows: Menu "Settings/Theme/Configuration" throws star...
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 16.12.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-29 19:09 UTC by rbingham
Modified: 2017-04-16 04:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of menu Settings/Theme/Configuration fail (5.87 KB, image/png)
2017-01-29 19:09 UTC, rbingham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rbingham 2017-01-29 19:09:03 UTC
Created attachment 103706 [details]
Screenshot of menu Settings/Theme/Configuration fail

Selecting menu path Settings->Theme->Configuration throws error msg "Cannot start Colors Settings panel from KDE Control Center".  Presumptive hidden assumption here is Kdenlive is running in a complete KDE desktop environment.  Screenshot attached.

Note this is perfectly fine IFF this feature is not done yet for Windows as indicated in release notes for this beta referenced on the Kdenlive download page at https://kdenlive.org/download/ .  However, there does not appear to be a Windows release notes URL on the download page nor a kdenlive.org Website search function to search for same. Release notes at https://community.kde.org/Applications/16.12_Release_Notes#Known_issues do not mention the Windows beta release.

If not yet baked for Windows then should have release notes saying so and better the functionality throwing a useful display msg when selected.
Comment 1 Vincent PINON 2017-04-16 04:04:02 UTC
Git commit 414d6579a16d2ce8d2ea7a2574fc33c0e90f837c by Vincent Pinon.
Committed on 16/04/2017 at 04:03.
Pushed by vpinon into branch 'Applications/17.04'.

Don't show color theme configuration option unavailable on Windows

M  +9    -8    src/utils/thememanager.cpp

https://commits.kde.org/kdenlive/414d6579a16d2ce8d2ea7a2574fc33c0e90f837c