Don't show color theme configuration option unavailable on Windows

BUG: 375723